Add jump functionality

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* .game {
+    height: 400px;
+    width: 500px;
+    background-color: yellow;
+} */
 .character {
     background-color: red;
     height: 70px;
